fixed the about NAV(before you say anything, i just went through and changed the word spacing to 50 to keep it consistent

--- a/about2.css
+++ b/about2.css
@@ -34,7 +34,7 @@ div.bar{
     margin-right: none;
     padding-top: 10px;
     padding-bottom: 15px;
-    word-spacing: 65px;
+    word-spacing: 50px;
     font-size: 20px;
     position: fixed; 
     top: 0;   
